--- a/app/views/application/show_functionalities.xml.erb
+++ b/app/views/application/show_functionalities.xml.erb
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <functionalities>
  <% @experiment.each do |p, u| %>
- <% functionality_id = p.proces_id.to_i-1 %>
+ <% functionality_id = 0 %>
  <functionality>
   <id><%= @experiment["functionalities"]["functionality"][functionality_id]["id"] %></id> 
   <name><%= @experiment["functionalities"]["functionality"][functionality_id]["name"] %></name>
   <child><%= @experiment["functionalities"]["functionality"][functionality_id]["child"] %></child>
+  <% if !@experiment["functionalities"]["functionality"][functionality_id]["input"].nil?%>
   <% @experiment["functionalities"]["functionality"][functionality_id]["input"].each do |t|%>
   <input><%= t %></input>
   <% end %>
+  <% end %>
+  <% if !@experiment["functionalities"]["functionality"][functionality_id]["output"].nil?%>
   <% @experiment["functionalities"]["functionality"][functionality_id]["output"].each do |t|%>
   <output><%= t %></output>
   <% end %>
+  <% end %>
  </functionality>
+ <% functionality_id += 1 %>
  <% end %>
 </functionalities>
